--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "coverage": "jest --coverage --verbose false"
+
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MasterTeam1997/RSSchool.git"
   },
-  
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/MasterTeam1997/RSSchool/issues"
   },
-  "homepage": "https://github.com/MasterTeam1997/RSSchool#readme"
+  "homepage": "https://github.com/MasterTeam1997/RSSchool#readme",
+  "devDependencies": {
+    "jest": "^27.3.1"
+  }
 }
